# microclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BLOG.md  CLAUDE.md  Cargo.toml  DEVELOP.md  Dockerfile  LICENSE  README.md  README_CN.md  TEST.md  build.rs  docker-compose.yaml  install.sh  mcp.peekaboo.example.json  mcp.windows.desktop.example.json  microclaw.config.example.yaml
.github/workflows/: ci.yml
crates/microclaw-app/: Cargo.toml
crates/microclaw-app/src/: builtin_skills.rs  lib.rs  logging.rs  transcribe.rs
crates/microclaw-channels/: Cargo.toml
crates/microclaw-channels/src/: channel.rs  channel_adapter.rs  delivery.rs  lib.rs
crates/microclaw-clawhub/: Cargo.toml
crates/microclaw-clawhub/src/: client.rs  gate.rs  install.rs  lib.rs  lockfile.rs  types.rs
crates/microclaw-core/: Cargo.toml
crates/microclaw-core/src/: error.rs  lib.rs  llm_types.rs  text.rs
crates/microclaw-storage/: Cargo.toml
crates/microclaw-storage/src/: db.rs  lib.rs  memory.rs  memory_quality.rs  usage.rs
crates/microclaw-tools/: Cargo.toml
crates/microclaw-tools/src/: command_runner.rs  lib.rs  path_guard.rs  runtime.rs  sandbox.rs  todo_store.rs  types.rs  web_content_validation.rs  web_fetch.rs  web_html.rs  web_search.rs
docs/clawhub/: overview.md
docs/hooks/: HOOK.md
docs/observability/: metrics.md
docs/operations/: runbook.md  stability-plan-2026-q1.md
docs/plugins/: overview.md
docs/releases/: pr-release-checklist.md  upgrade-guide.md
docs/reports/: channel-gap-zeroclaw-2026-02-22.md  migration-regression.md  performance-regression.md  security-regression.md  stability-report.md
docs/rfcs/: 0001-authn-authz-model.md  0002-hooks-event-model.md  0003-session-fork-model.md  0004-metrics-naming.md  README.md
docs/roadmap/: feature-completion-pr-plan.md  feature-completion-tracking-board.md
docs/security/: execution-model.md
docs/test/: blackbox-core-20-cases.md
examples/plugins/: smoke-test.yaml
hooks/block-bash/: HOOK.md  hook.sh
hooks/block-global-memory/: HOOK.md  hook.sh
hooks/filter-global-structured-memory/: HOOK.md  hook.sh
hooks/redact-tool-output/: HOOK.md  hook.sh
microclaw.data/skills/morfeo-nano-banana-pro/: _meta.json
microclaw.data/skills/nano-banana-pro-2/: _meta.json
scripts/: matrix-e2ee-smoke-test.sh  release_finalize.sh  release_homebrew.sh
skills/built-in/apple-calendar/: SKILL.md
skills/built-in/apple-notes/: SKILL.md
skills/built-in/apple-reminders/: SKILL.md
skills/built-in/find-skills/: SKILL.md
skills/built-in/weather/: SKILL.md
src/: agent_engine.rs  channel.rs  chat_commands.rs  claude.rs  codex_auth.rs  config.rs  config_wizard.rs  db.rs  doctor.rs  embedding.rs  error.rs  hooks.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory.rs  memory_quality.rs  otlp.rs  plugins.rs  runtime.rs  scheduler.rs  setup.rs  skills.rs  telegram.rs  transcribe.rs  usage.rs  web.rs  whatsapp.rs
src/channels/: delivery.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  imessage.rs  irc.rs  matrix.rs  mod.rs  nostr.rs  qq.rs  setup_def.rs  signal.rs  slack.rs  telegram.rs  whatsapp.rs
src/clawhub/: cli.rs  mod.rs  tools.rs
src/tools/: activate_skill.rs  bash.rs  browser.rs  edit_file.rs  export_chat.rs  glob.rs  grep.rs  mcp.rs  memory.rs  mod.rs  read_file.rs  schedule.rs  send_message.rs  structured_memory.rs  sub_agent.rs  sync_skills.rs  time_math.rs  todo.rs  web_fetch.rs  web_html.rs  web_search.rs  write_file.rs
src/web/: auth.rs  config.rs  metrics.rs  middleware.rs  sessions.rs  stream.rs
tests/: config_validation.rs
web/src/: main.tsx  styles.css
