[workspace]
members = [
    ".",
    "crates/microclaw-core",
    "crates/microclaw-storage",
    "crates/microclaw-tools",
    "crates/microclaw-channels",
    "crates/microclaw-app",
]
resolver = "2"

[package]
name = "microclaw"
version = "0.0.83"
edition = "2021"
license = "MIT"

[features]
default = []
sqlite-vec = ["microclaw-storage/sqlite-vec"]

[dependencies]
microclaw-core = { path = "crates/microclaw-core" }
microclaw-storage = { path = "crates/microclaw-storage" }
microclaw-tools = { path = "crates/microclaw-tools" }
microclaw-channels = { path = "crates/microclaw-channels" }
microclaw-app = { path = "crates/microclaw-app" }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
cron = "0.13"
urlencoding = "2"
base64 = "0.22"
chrono-tz = "0.10"
zip = "2"
sha2 = "0.10"
axum = "0.7"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
include_dir = "0.7"
async-stream = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
sha2 = "0.10"
argon2 = "0.5"
opentelemetry-proto = { version = "0.28", features = ["gen-tonic-messages"] }
prost = "0.13"

[dev-dependencies]
tower = "0.5"
