[package]
name = "microclaw-clawhub"
version = "0.0.80"
edition = "2021"
license = "MIT"

[dependencies]
microclaw-core = { path = "../microclaw-core" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
