[package]
name = "microclaw-core"
version = "0.0.80"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
