[package]
name = "microclaw-tools"
version = "0.0.80"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
microclaw-core = { path = "../microclaw-core" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
urlencoding = "2"
